--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "maatwebsite/excel": "^3.1",
         "mpdf/mpdf": "^8.1.3",
         "spatie/laravel-activitylog": "^4.7",
         "tinymce/tinymce": "^6.5",
